--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>풍생고등학교 음악 신청</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
@@ -11,7 +12,7 @@
     <div class="container mx-auto px-4 py-8">
         <div class="relative mb-8">
             <h1 class="text-3xl font-bold text-center">풍생고등학교 음악 신청</h1>
-            <h4 class="absolute bottom-0 right-0 text-gray-500">by. 코딩동아리</h4>
+            <h4 class="absolute bottom-0 right-0 text-gray-500">by. 코딩클래스</h4>
         </div>
         
         <!-- 음악 신청 폼 -->
