--- a/src/views/index.html
+++ b/src/views/index.html
@@ -21,9 +21,9 @@
             }
         }
         .gradient-animate {
-            background: linear-gradient(-30deg, #A3EBFF, #FFB3D7);
+            background: linear-gradient(15deg, #A3EBFF 30%, #FFDEED 70%);
             background-size: 400% 400%;
-            animation: gradient 5s ease infinite;
+            animation: gradient 15s ease infinite;
         }
     </style>
 </head>
