--- a/src/views/index.html
+++ b/src/views/index.html
@@ -104,7 +104,7 @@
                                 class="mt-1 block w-full rounded-md border-1 border-gray-500 shadow focus:border-blue-200 focus:ring-blue-200"></textarea>
                         </div>
                         <button type="submit"
-                            class="w-full gradient-button text-white py-2 px-4 rounded-md">
+                            class="w-full gradient-button font-bold text-white py-2 px-4 rounded-md shadow-md">
                             신청하기
                         </button>
                     </form>
