fix: 요구사항에 맞지 않는 제목 오류 수정

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -49,7 +49,7 @@
 <body class="min-h-screen">
     <div class="container mx-auto px-4 py-8">
         <div class="relative mb-8">
-            <h1 class="text-base md:text-3xl font-bold text-center">!! 풍생고 학생들의 신청곡과 사연 !!</h1>
+            <h1 class="text-base md:text-3xl font-bold text-center">!! 풍생고 학생들의 신청곡 및 사연 !!</h1>
             <h2 class="text-sm md:text-2xl font-bold text-center text-gray-700 mt-2">by. 코딩클래스</h2>
         </div>
         
