--- a/src/views/index.html
+++ b/src/views/index.html
@@ -91,17 +91,17 @@
                         <div>
                             <label class="block text-sm font-medium text-gray-700">제목</label>
                             <input type="text" id="title" required
-                                class="mt-1 block w-full rounded-md border-1 border-gray-500 shadow focus:border-blue-200 focus:ring-blue-200">
+                                class="mt-1 block w-full rounded-md border-1 border-gray-500 shadow focus:border-blue-200 focus:ring-blue-200 min-h-[48px]">
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700">가수</label>
                             <input type="text" id="artist" required
-                                class="mt-1 block w-full rounded-md border-1 border-gray-500 shadow focus:border-blue-200 focus:ring-blue-200">
+                                class="mt-1 block w-full rounded-md border-1 border-gray-500 shadow focus:border-blue-200 focus:ring-blue-200 min-h-[48px]">
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700">신청 사연</label>
                             <textarea id="reason" required
-                                class="mt-1 block w-full rounded-md border-1 border-gray-500 shadow focus:border-blue-200 focus:ring-blue-200"></textarea>
+                                class="mt-1 block w-full rounded-md border-1 border-gray-500 shadow focus:border-blue-200 focus:ring-blue-200 min-h-[120px]"></textarea>
                         </div>
                         <button type="submit"
                             class="w-full gradient-button font-bold text-white py-2 px-4 rounded-md shadow-md">
